tests/ui/issues/issue-60622.stderr
error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/issue-60622.rs:10:11
   |
LL |     fn a(&self) {}
   |          - the late bound lifetime parameter is introduced here
...
LL |     b.a::<'_, T>();
   |           ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #42868 <https://github.com/rust-lang/rust/issues/42868>
note: the lint level is defined here
  --> $DIR/issue-60622.rs:1:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(late_bound_lifetime_arguments)]` implied by `#[deny(warnings)]`

error[E0107]: method takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-60622.rs:10:7
   |
LL |     b.a::<'_, T>();
   |       ^       - help: remove the unnecessary generic argument
   |       |
   |       expected 0 generic arguments
   |
note: method defined here, with 0 generic parameters
  --> $DIR/issue-60622.rs:6:8
   |
LL |     fn a(&self) {}
   |        ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
